--- a/PROJEKT-3/style.css
+++ b/PROJEKT-3/style.css
@@ -14,12 +14,14 @@ body {
   align-items: center;
   flex-direction: column;
   gap: 3rem;
+  margin: 0;
 }
 
 h1 {
   font-family: sans-serif;
   color: rgb(36, 144, 161);
-  outline-style: solid black;
+  text-shadow: 1px 1px 2px black;
+  margin: 0;
 }
 
 .monke {
@@ -28,26 +30,16 @@ h1 {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  /* height: 50%; */
   aspect-ratio: 1;
   background-color: rgb(36, 144, 161);
   box-shadow: -7px 14px rgb(34, 34, 46);
   border-radius: 1rem;
   gap: 1rem;
-  /* display: grid;
-  grid-template-columns: 50px 50px 50px;
-  grid-template-rows: 50px 50px 50px;
-  gap: 5px; */
 }
 
 .square-container {
   display: flex;
-  align-items: center;
-  justify-content: center;
   gap: 1rem;
-  flex-direction: row;
-  width: 100%;
-  height: 100%;
 }
 
 .square {
@@ -86,12 +78,10 @@ h1 {
   background-color: rgb(36, 144, 161);
   border-radius: 1rem;
   box-shadow: -7px 14px rgb(34, 34, 46);
-}
-
-img {
-  max-width: 100%;
-  max-height: 100%;
-  width: 3rem;
+  font-family: sans-serif;
+  font-size: 1.5rem;
+  color: white;
+  border: none;
 }
 
 #reload:hover {
@@ -106,7 +96,7 @@ img {
 .message {
   font-family: sans-serif;
   text-transform: uppercase;
-  font-size: 5rem;
+  font-size: 2rem;
   color: rgb(55, 6, 86);
   font-weight: bold;
 }
